=== HEAD

* Correctly literalize BigDecimal NaN and (+-)Infinity values (Fixes #256) (jeremyevans)

* Make Sequel raise an Error if you attempt to subclass Sequel::Model before setting up a database connection (jeremyevans)

* Add Sequel::ValidationFailed exception to be raised when a record fails because a validation fails (bougyman)

* Make Database#schema raise an error if given a table that doesn't exist (jeremyevans) (#255)

* Make Model#inspect call Model#inspect_values private method for easier overloading (bougyman)

* Add methods to create and drop functions, triggers, and procedural languages on PostgreSQL (jeremyevans)

* Fix Dataset#count when using UNION, EXCEPT, or INTERSECT (jeremyevans)

* Make SQLite keep table's primary key information when dropping columns (jmhodges)

* Support dropping indicies on SQLite (jmhodges)

=== 2.8.0 (2008-12-05)

* Support drop column operations inside a transaction on sqlite (jeremyevans)

* Support literal strings with placeholders and subselects in prepared statements (jeremyevans)

* Have the connection pool remove disconnected connections when the adapter supports it (jeremyevans)

* Make Dataset#exists return a LiteralString (jeremyevans)

* Support multiple SQL statements in one query in the MySQL adapter (jeremyevans)

* Add stored procedure support for the MySQL and JDBC adapters (jeremyevans, krsgoss) (#252)

* Support options when altering a column's type (for changing enums, varchar size, etc.) (jeremyevans)

* Support AliasedExpressions in tables when using implicitly qualified arguments in joins (jeremyevans)

* Support Dataset#except on Oracle (jeremyevans)

* Raise errors when EXCEPT/INTERSECT is used when not supported (jeremyevans)

* Fix ordering of UNION, INTERSECT, and EXCEPT statements (jeremyevans) (#253)

* Support aliasing subselects in the Oracle adapter (jeremyevans)

* Add a subadapter for the Progress RDBMS to the ODBC adapter (:db_type=>'progress') (groveriffic) (#251)
